crates/monochange/tests/snapshots/cli_output__placeholder_publish_dry_run_reports_missing_manual_registry_workflow_configuration@placeholder_publish_dry_run_reports_missing_manual_registry_workflow_configuration.snap
---
source: crates/monochange/tests/cli_output.rs
info:
  program: mc
  args:
    - placeholder-publish
    - "--dry-run"
    - "--format"
    - json
  env:
    GITHUB_ACTIONS: ""
    GITHUB_JOB: ""
    GITHUB_REF_NAME: ""
    GITHUB_REPOSITORY: ""
    GITHUB_RUN_ID: ""
    GITHUB_WORKFLOW: ""
    GITHUB_WORKFLOW_REF: ""
    MONOCHANGE_CRATES_IO_API_URL: "http://127.0.0.1:58768"
    MONOCHANGE_JSR_BASE_URL: "http://127.0.0.1:58768"
    MONOCHANGE_NPM_REGISTRY_URL: "http://127.0.0.1:58768"
    MONOCHANGE_PUB_DEV_API_URL: "http://127.0.0.1:58768"
    MONOCHANGE_TRUSTED_PUBLISHING_ENVIRONMENT: ""
    NO_COLOR: "1"
    RUST_LOG: ""
---
success: true
exit_code: 0
----- stdout -----
{
  "packagePublish": {
    "dryRun": true,
    "mode": "placeholder",
    "packages": [
      {
        "ecosystem": "cargo",
        "message": "would publish placeholder core 0.0.0 to crates_io",
        "package": "core",
        "placeholder": true,
        "registry": "crates_io",
        "status": "planned",
        "trustedPublishing": {
          "environment": null,
          "message": "configure trusted publishing manually for `core` before the next built-in release publish; open https://crates.io/crates/core and finish the GitHub context setup first: config error: trusted publishing could not determine the GitHub workflow; set `publish.trusted_publishing.workflow`. No supported CI provider identity was detected for crates_io trusted publishing; supported providers: GitHub Actions.",
          "repository": null,
          "setupUrl": "https://crates.io/crates/core",
          "status": "manual_action_required",
          "workflow": null
        },
        "version": "0.0.0"
      },
      {
        "ecosystem": "npm",
        "message": "would publish placeholder npm-pkg 0.0.0 to npm",
        "package": "npm_pkg",
        "placeholder": true,
        "registry": "npm",
        "status": "planned",
        "trustedPublishing": {
          "environment": null,
          "message": "configure trusted publishing manually for `npm-pkg` before the next built-in release publish; open https://www.npmjs.com/package/npm-pkg/access and finish the GitHub context setup first: config error: trusted publishing could not determine the GitHub workflow; set `publish.trusted_publishing.workflow`. No supported CI provider identity was detected for npm trusted publishing; supported providers: GitHub Actions, GitLab CI/CD.",
          "repository": null,
          "setupUrl": "https://www.npmjs.com/package/npm-pkg/access",
          "status": "manual_action_required",
          "workflow": null
        },
        "version": "0.0.0"
      }
    ]
  },
  "publishRateLimits": {
    "batches": [
      {
        "batchIndex": 1,
        "operation": "placeholder_publish",
        "packages": [
          "core"
        ],
        "recommendedWaitSeconds": null,
        "registry": "crates_io",
        "totalBatches": 1
      },
      {
        "batchIndex": 1,
        "operation": "placeholder_publish",
        "packages": [
          "npm_pkg"
        ],
        "recommendedWaitSeconds": null,
        "registry": "npm",
        "totalBatches": 1
      }
    ],
    "dryRun": true,
    "warnings": [],
    "windows": [
      {
        "batchesRequired": 1,
        "confidence": "high",
        "evidence": [
          {
            "kind": "source_code",
            "notes": "upload endpoint rate limiting in server implementation",
            "title": "crates.io application source",
            "url": "https://github.com/rust-lang/crates.io"
          }
        ],
        "fitsSingleWindow": true,
        "limit": 10,
        "notes": "crates.io source enforces 10 uploads per minute for existing crates",
        "operation": "placeholder_publish",
        "pending": 1,
        "registry": "crates_io",
        "windowSeconds": 60
      },
      {
        "batchesRequired": 1,
        "confidence": "low",
        "evidence": [
          {
            "kind": "official",
            "notes": "official workflow guidance but no exact package publish quota",
            "title": "npm trusted publishing documentation",
            "url": "https://docs.npmjs.com/trusted-publishers"
          }
        ],
        "fitsSingleWindow": true,
        "limit": null,
        "notes": "npm does not publish a precise package publish quota; use sequential CI publishing with retries",
        "operation": "placeholder_publish",
        "pending": 1,
        "registry": "npm",
        "windowSeconds": null
      }
    ]
  }
}

----- stderr -----
◆ Publishing 2 packages (Placeholder dry-run) across 🦀 cargo, 📦 npm
→ 🦀 cargo core checking 0.0.0 on crates_io
📝 🦀 cargo core would publish 0.0.0 to crates_io
→ 📦 npm npm-pkg checking 0.0.0 on npm
📝 📦 npm npm-pkg would publish 0.0.0 to npm
◆ Publish complete: 2 packages, ✅ 0 published, ⏭️ 2 skipped, ❌ 0 failed
