crates/monochange/tests/snapshots/cli_output__prepare_release_writes_manifest_json@prepare_release_writes_manifest_json.snap
---
source: crates/monochange/tests/cli_output.rs
info:
  program: mc
  args:
    - release
    - "--dry-run"
  env:
    MONOCHANGE_RELEASE_DATE: 2026-04-06
    NO_COLOR: "1"
    RUST_LOG: ""
---
success: true
exit_code: 0
----- stdout -----
# `release` (dry-run)

## Summary

- **Version:** `1.1.0`
- **Released packages:** `workflow-app`, `workflow-core`

## Release targets

- **group `sdk`** → `v1.1.0`
  - tag: yes · release: yes

## Release manifest

- `.monochange/local/release-manifest.json`

## Changed files

- `Cargo.toml`
- `changelog.md`
- `crates/app/Cargo.toml`
- `crates/core/CHANGELOG.md`
- `crates/core/Cargo.toml`
- `group.toml`

----- stderr -----
