crates/monochange/tests/snapshots/cli_output__release_cli_reports_missing_changesets_cleanly@release_cli_reports_missing_changesets_cleanly.snap
---
source: crates/monochange/tests/cli_output.rs
info:
  program: mc
  args:
    - release
  env:
    MONOCHANGE_RELEASE_DATE: 2026-04-06
    NO_COLOR: "1"
    RUST_LOG: ""
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
config error: no markdown changesets found under .changeset
