crates/monochange/tests/snapshots/cli_output__release_dry_run_cli_defaults_to_markdown_output@release_dry_run_cli_defaults_to_markdown_output.snap
---
source: crates/monochange/tests/cli_output.rs
info:
  program: mc
  args:
    - release
    - "--dry-run"
  env:
    MONOCHANGE_RELEASE_DATE: 2026-04-06
    NO_COLOR: "1"
    RUST_LOG: ""
---
success: true
exit_code: 0
----- stdout -----
# `release` (dry-run)

## Summary

- **Released packages:** `workflow-app`, `workflow-core`

## Release targets

- **package `app`** → `app/v1.0.1`
  - tag: no · release: no
- **package `core`** → `core/v1.1.0`
  - tag: no · release: no

## Release manifest

- `.monochange/local/release-manifest.json`

## Changed files

- `crates/app/Cargo.toml`
- `crates/core/Cargo.toml`

----- stderr -----
