crates/monochange/tests/snapshots/cli_output__release_dry_run_cli_json_exposes_group_owned_release_targets@release_dry_run_cli_json_exposes_group_owned_release_targets.snap
---
source: crates/monochange/tests/cli_output.rs
expression: redacted
---
{
  "changedFiles": [
    "Cargo.toml",
    "changelog.md",
    "crates/app/Cargo.toml",
    "crates/core/CHANGELOG.md",
    "crates/core/Cargo.toml",
    "group.toml"
  ],
  "changelogs": [
    {
      "format": "monochange",
      "notes": {
        "sections": [
          {
            "collapsed": false,
            "entries": [
              "[multiline text]"
            ],
            "title": "Minor"
          }
        ],
        "summary": [
          "Grouped release for `sdk`."
        ],
        "title": "1.1.0 ([DATE])"
      },
      "ownerId": "sdk",
      "ownerKind": "group",
      "path": "changelog.md",
      "rendered": "[multiline text]"
    },
    {
      "format": "monochange",
      "notes": {
        "sections": [
          {
            "collapsed": false,
            "entries": [
              "#### add feature"
            ],
            "title": "Minor"
          }
        ],
        "summary": [],
        "title": "1.1.0 ([DATE])"
      },
      "ownerId": "core",
      "ownerKind": "package",
      "path": "crates/core/CHANGELOG.md",
      "rendered": "[multiline text]"
    }
  ],
  "changesets": [
    {
      "context": {
        "capabilities": {
          "actorProfiles": false,
          "commitWebUrls": false,
          "issueComments": false,
          "relatedIssues": false,
          "reviewRequestLookup": false
        },
        "host": null,
        "introduced": null,
        "lastUpdated": null,
        "provider": "generic_git",
        "relatedIssues": []
      },
      "details": null,
      "path": ".changeset/feature.md",
      "summary": "add feature",
      "targets": [
        {
          "bump": "minor",
          "changeType": "minor",
          "evidenceRefs": [],
          "id": "core",
          "kind": "package",
          "origin": "direct-change"
        }
      ]
    }
  ],
  "command": "release",
  "deletedChangesets": [],
  "dryRun": true,
  "groupVersion": "1.1.0",
  "packagePublications": [
    {
      "ecosystem": "cargo",
      "mode": "builtin",
      "package": "app",
      "registry": "crates_io",
      "trustedPublishing": {
        "enabled": true,
        "environment": null,
        "repository": null,
        "workflow": null
      },
      "version": "1.1.0"
    },
    {
      "ecosystem": "cargo",
      "mode": "builtin",
      "package": "core",
      "registry": "crates_io",
      "trustedPublishing": {
        "enabled": true,
        "environment": null,
        "repository": null,
        "workflow": null
      },
      "version": "1.1.0"
    }
  ],
  "plan": {
    "compatibilityEvidence": [],
    "decisions": [
      {
        "bump": "minor",
        "package": "cargo:crates/app/Cargo.toml",
        "plannedVersion": "1.1.0",
        "reasons": [
          "depends on `cargo:crates/core/Cargo.toml`",
          "shares version group `sdk`"
        ],
        "trigger": "version-group-synchronization",
        "upstreamSources": [
          "cargo:crates/core/Cargo.toml"
        ]
      },
      {
        "bump": "minor",
        "package": "cargo:crates/core/Cargo.toml",
        "plannedVersion": "1.1.0",
        "reasons": [
          "add feature",
          "shares version group `sdk`"
        ],
        "trigger": "direct-change",
        "upstreamSources": [
          "cargo:crates/core/Cargo.toml"
        ]
      }
    ],
    "groups": [
      {
        "bump": "minor",
        "id": "sdk",
        "members": [
          "cargo:crates/core/Cargo.toml",
          "cargo:crates/app/Cargo.toml"
        ],
        "plannedVersion": "1.1.0"
      }
    ],
    "unresolvedItems": [],
    "warnings": [],
    "workspaceRoot": "."
  },
  "releaseTargets": [
    {
      "id": "sdk",
      "kind": "group",
      "members": [
        "core",
        "app"
      ],
      "release": true,
      "renderedChangelogTitle": "1.1.0 ([DATE])",
      "renderedTitle": "1.1.0 ([DATE])",
      "tag": true,
      "tagName": "v1.1.0",
      "version": "1.1.0",
      "versionFormat": "primary"
    }
  ],
  "releasedPackages": [
    "workflow-app",
    "workflow-core"
  ],
  "version": "1.1.0"
}
