crates/monochange/tests/snapshots/cli_output__release_dry_run_cli_json_renders_diff_preview@release_dry_run_cli_json_renders_diff_preview.snap
---
source: crates/monochange/tests/cli_output.rs
assertion_line: 431
info:
  program: mc
  args:
    - release
    - "--dry-run"
    - "--diff"
    - "--format"
    - json
  env:
    MONOCHANGE_RELEASE_DATE: 2026-04-06
    NO_COLOR: "1"
    RUST_LOG: ""
---
success: true
exit_code: 0
----- stdout -----
{
  "fileDiffs": [
    {
      "diff": "--- a/Cargo.toml\n+++ b/Cargo.toml\n@@ -1,10 +1,10 @@\n [workspace]\n members = [\"crates/*\"]\n resolver = \"2\"\n \n [workspace.package]\n-version = \"1.0.0\"\n+version = \"1.1.0\"\n \n [workspace.dependencies]\n-workflow-core = { path = \"./crates/core\", version = \"1.0.0\" }\n-workflow-app = { path = \"./crates/app\", version = \"1.0.0\" }\n+workflow-core = { path = \"./crates/core\", version = \"1.1.0\" }\n+workflow-app = { path = \"./crates/app\", version = \"1.1.0\" }",
      "path": "Cargo.toml"
    },
    {
      "diff": "--- a/changelog.md\n+++ b/changelog.md\n@@ -1 +1,12 @@\n # Changelog\n+\n+## 1.1.0 ([DATE])\n+\n+Grouped release for `sdk`.\n+\n+### Minor\n+\n+> [!NOTE]\n+> *core*\n+\n+#### add feature",
      "path": "changelog.md"
    },
    {
      "diff": "--- a/crates/core/CHANGELOG.md\n+++ b/crates/core/CHANGELOG.md\n@@ -1 +1,7 @@\n # Changelog\n+\n+## 1.1.0 ([DATE])\n+\n+### Minor\n+\n+#### add feature",
      "path": "crates/core/CHANGELOG.md"
    },
    {
      "diff": "--- a/group.toml\n+++ b/group.toml\n@@ -1,6 +1,6 @@\n [workspace.package]\n-version = \"1.0.0\"\n+version = \"1.1.0\"\n \n [workspace.dependencies]\n-workflow-core = { version = \"1.0.0\" }\n-workflow-app = { version = \"1.0.0\" }\n+workflow-core = { version = \"1.1.0\" }\n+workflow-app = { version = \"1.1.0\" }",
      "path": "group.toml"
    }
  ],
  "issueComments": [],
  "manifest": {
    "changedFiles": [
      "Cargo.toml",
      "changelog.md",
      "crates/app/Cargo.toml",
      "crates/core/CHANGELOG.md",
      "crates/core/Cargo.toml",
      "group.toml"
    ],
    "changelogs": [
      {
        "format": "monochange",
        "notes": {
          "sections": [
            {
              "collapsed": false,
              "entries": [
                "> [!NOTE]\n> *core*\n\n#### add feature"
              ],
              "title": "Minor"
            }
          ],
          "summary": [
            "Grouped release for `sdk`."
          ],
          "title": "1.1.0 ([DATE])"
        },
        "ownerId": "sdk",
        "ownerKind": "group",
        "path": "changelog.md",
        "rendered": "## 1.1.0 ([DATE])\n\nGrouped release for `sdk`.\n\n### Minor\n\n> [!NOTE]\n> *core*\n\n#### add feature"
      },
      {
        "format": "monochange",
        "notes": {
          "sections": [
            {
              "collapsed": false,
              "entries": [
                "#### add feature"
              ],
              "title": "Minor"
            }
          ],
          "summary": [],
          "title": "1.1.0 ([DATE])"
        },
        "ownerId": "core",
        "ownerKind": "package",
        "path": "crates/core/CHANGELOG.md",
        "rendered": "## 1.1.0 ([DATE])\n\n### Minor\n\n#### add feature"
      }
    ],
    "changesets": [
      {
        "context": {
          "capabilities": {
            "actorProfiles": false,
            "commitWebUrls": false,
            "issueComments": false,
            "relatedIssues": false,
            "reviewRequestLookup": false
          },
          "host": null,
          "introduced": null,
          "lastUpdated": null,
          "provider": "generic_git",
          "relatedIssues": []
        },
        "details": null,
        "path": ".changeset/feature.md",
        "summary": "add feature",
        "targets": [
          {
            "bump": "minor",
            "changeType": "minor",
            "evidenceRefs": [],
            "id": "core",
            "kind": "package",
            "origin": "direct-change"
          }
        ]
      }
    ],
    "command": "release",
    "deletedChangesets": [],
    "dryRun": true,
    "groupVersion": "1.1.0",
    "packagePublications": [
      {
        "ecosystem": "cargo",
        "mode": "builtin",
        "package": "app",
        "registry": "crates_io",
        "trustedPublishing": {
          "enabled": true,
          "environment": null,
          "repository": null,
          "workflow": null
        },
        "version": "1.1.0"
      },
      {
        "ecosystem": "cargo",
        "mode": "builtin",
        "package": "core",
        "registry": "crates_io",
        "trustedPublishing": {
          "enabled": true,
          "environment": null,
          "repository": null,
          "workflow": null
        },
        "version": "1.1.0"
      }
    ],
    "plan": {
      "compatibilityEvidence": [],
      "decisions": [
        {
          "bump": "minor",
          "package": "cargo:crates/app/Cargo.toml",
          "plannedVersion": "1.1.0",
          "reasons": [
            "depends on `cargo:crates/core/Cargo.toml`",
            "shares version group `sdk`"
          ],
          "trigger": "version-group-synchronization",
          "upstreamSources": [
            "cargo:crates/core/Cargo.toml"
          ]
        },
        {
          "bump": "minor",
          "package": "cargo:crates/core/Cargo.toml",
          "plannedVersion": "1.1.0",
          "reasons": [
            "add feature",
            "shares version group `sdk`"
          ],
          "trigger": "direct-change",
          "upstreamSources": [
            "cargo:crates/core/Cargo.toml"
          ]
        }
      ],
      "groups": [
        {
          "bump": "minor",
          "id": "sdk",
          "members": [
            "cargo:crates/core/Cargo.toml",
            "cargo:crates/app/Cargo.toml"
          ],
          "plannedVersion": "1.1.0"
        }
      ],
      "unresolvedItems": [],
      "warnings": [],
      "workspaceRoot": "."
    },
    "releaseTargets": [
      {
        "id": "sdk",
        "kind": "group",
        "members": [
          "core",
          "app"
        ],
        "release": true,
        "renderedChangelogTitle": "1.1.0 ([DATE])",
        "renderedTitle": "1.1.0 ([DATE])",
        "tag": true,
        "tagName": "v1.1.0",
        "version": "1.1.0",
        "versionFormat": "primary"
      }
    ],
    "releasedPackages": [
      "workflow-app",
      "workflow-core"
    ],
    "version": "1.1.0"
  },
  "packagePublish": null,
  "publishRateLimits": null,
  "releaseCommit": null,
  "releaseRequest": null,
  "releases": []
}

----- stderr -----
