crates/monochange/tests/snapshots/cli_output__release_dry_run_cli_text_renders_diff_preview@release_dry_run_cli_text_renders_diff_preview.snap
---
source: crates/monochange/tests/cli_output.rs
info:
  program: mc
  args:
    - release
    - "--dry-run"
    - "--diff"
    - "--format"
    - text
  env:
    MONOCHANGE_RELEASE_DATE: 2026-04-06
    NO_COLOR: "1"
    RUST_LOG: ""
---
success: true
exit_code: 0
----- stdout -----
command `release` completed (dry-run)
version: 1.1.0
released packages: workflow-app, workflow-core
release targets:
- group sdk -> v1.1.0 (tag: true, release: true)
release manifest: .monochange/release-manifest.json
changed files:
- Cargo.toml
- changelog.md
- crates/app/Cargo.toml
- crates/core/CHANGELOG.md
- crates/core/Cargo.toml
- group.toml
file diffs:
--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [workspace]
 members = ["crates/*"]
 resolver = "2"
 
 [workspace.package]
-version = "1.0.0"
+version = "1.1.0"
 
 [workspace.dependencies]
-workflow-core = { path = "./crates/core", version = "1.0.0" }
-workflow-app = { path = "./crates/app", version = "1.0.0" }
+workflow-core = { path = "./crates/core", version = "1.1.0" }
+workflow-app = { path = "./crates/app", version = "1.1.0" }

--- a/changelog.md
+++ b/changelog.md
@@ -1 +1,12 @@
 # Changelog
+
+## 1.1.0 ([DATE])
+
+Grouped release for `sdk`.
+
+### Minor
+
+> [!NOTE]
+> *core*
+
+#### add feature

--- a/crates/core/CHANGELOG.md
+++ b/crates/core/CHANGELOG.md
@@ -1 +1,7 @@
 # Changelog
+
+## 1.1.0 ([DATE])
+
+### Minor
+
+#### add feature

--- a/group.toml
+++ b/group.toml
@@ -1,6 +1,6 @@
 [workspace.package]
-version = "1.0.0"
+version = "1.1.0"
 
 [workspace.dependencies]
-workflow-core = { version = "1.0.0" }
-workflow-app = { version = "1.0.0" }
+workflow-core = { version = "1.1.0" }
+workflow-app = { version = "1.1.0" }

----- stderr -----
