crates/monochange/tests/snapshots/cli_output__release_dry_run_cli_uses_explicit_group_versions_from_member_changes@release_dry_run_cli_uses_explicit_group_versions_from_member_changes.snap
---
source: crates/monochange/tests/cli_output.rs
info:
  program: mc
  args:
    - release
    - "--dry-run"
    - "--format"
    - text
  env:
    MONOCHANGE_RELEASE_DATE: 2026-04-06
    NO_COLOR: "1"
    RUST_LOG: ""
---
success: true
exit_code: 0
----- stdout -----
command `release` completed (dry-run)
version: 2.0.0
released packages: workflow-app, workflow-core
release targets:
- group sdk -> v2.0.0 (tag: true, release: true)
release manifest: .monochange/local/release-manifest.json
changed files:
- Cargo.toml
- changelog.md
- crates/app/Cargo.toml
- crates/core/CHANGELOG.md
- crates/core/Cargo.toml
- group.toml

----- stderr -----
