crates/monochange/tests/snapshots/cli_output__release_pr_workflow_reports_dry_run_pull_request_preview@release_pr_workflow_reports_dry_run_pull_request_preview.snap
---
source: crates/monochange/tests/cli_output.rs
info:
  program: mc
  args:
    - release-pr
    - "--dry-run"
  env:
    MONOCHANGE_RELEASE_DATE: 2026-04-06
    NO_COLOR: "1"
    RUST_LOG: ""
---
success: true
exit_code: 0
----- stdout -----
# `release-pr` (dry-run)

## Summary

- **Version:** `1.1.0`
- **Released packages:** `workflow-app`, `workflow-core`

## Release targets

- **group `sdk`** → `v1.1.0`
  - tag: yes · release: yes

## Release manifest

- `.monochange/release-manifest.json`

## Release request

- dry-run ifiokjr/monochange monochange/release/release-pr -> main via github

## Changed files

- `Cargo.toml`
- `changelog.md`
- `crates/app/Cargo.toml`
- `crates/core/CHANGELOG.md`
- `crates/core/Cargo.toml`
- `group.toml`

----- stderr -----
