crates/monochange/tests/snapshots/cli_output__validate_cli_succeeds_for_valid_workspace@validate_cli_succeeds_for_valid_workspace.snap
---
source: crates/monochange/tests/cli_output.rs
info:
  program: mc
  args:
    - validate
  env:
    NO_COLOR: "1"
    RUST_LOG: ""
---
success: true
exit_code: 0
----- stdout -----
workspace validation passed for .

----- stderr -----
lint: no issues found
